# picoprobe-candybar

./: .gitignore  .gitmodules  ATTRIBUTION.md  BUILDING.md  LICENSE.txt  README.md
.githooks/: pre-commit.sh
enclosure/: picoprobe-candybar.FCStd
firmware/: CMakeLists.txt
firmware/override/: board_debug_probe_config.h
firmware/src/: candybar_binary_config.c  candybar_hook.c  pico_binary_license_info.h
pcb/: fp-lib-table  picoprobe-candybar.kicad_pcb  picoprobe-candybar.kicad_pro  picoprobe-candybar.kicad_sch  sym-lib-table
pcb/project-libraries/debugprobe-components/: ProjectSymbols_PicoprobeCandybar.kicad_sym
pcb/project-libraries/project-specific-components/: ProjectSymbols_PicoprobeCandybar.kicad_sym
pcb/project-libraries/project-specific-components/ProjectFootprints_PicoprobeCandybar.pretty/: PinHeader_1x03_P2.54mm_Horizontal_SMD.kicad_mod  SW_Rocker_SPST_QuickConnect_P10.8mm_SW-R1-1X-E-XX-0_Retrofit-SMD-Horizontal.kicad_mod  SW_Rocker_SPST_QuickConnect_P10.8mm_SW-R1-1X-E-XX-0_Retrofit-SMD-Horizontal_Mirrored.kicad_mod  SW_Slide_SP3T_Common_Horizontal_P2mm_CUI_SLW-1277545-2A-RA-S-D.kicad_mod  SW_Slide_SP3T_P3.2mm_CUI_SLW-156646-5A-N-D_Retrofit-SMD-Horizontal.kicad_mod  SW_Slide_SP3T_P3.2mm_CUI_SLW-156646-5A-N-D_Retrofit-SMD-Horizontal_Mirrored.kicad_mod  SW_Slide_SP3T_Vertical_P3.2mm_CUI_SLW-156646-5A-N-D.kicad_mod
